Finished users related endpoints
